# 3d-reconstruction

./: .gitignore  .gitmodules  LMNet-dataset.ipynb  README.md  at_least_n_persp_analysis.ipynb  colmap_image_gen_blender.py  lmnet-paper-plots-Copy1.ipynb  lmnet-paper-plots.ipynb  mpse-new.ipynb  neptune-exp.py  neptune-runs.ipynb  noise-angle-plots.ipynb  pyproject.toml  test.md  utils.py
figures/: points_fixed_rmse.eps  points_fixed_stress.eps  points_fixed_time.eps  points_variable_rmse.eps  points_variable_stress.eps  points_variable_time.eps  pointsinviewpoint_fixed_rmse.eps  pointsinviewpoint_fixed_stress.eps  pointsinviewpoint_variable_rmse.eps  pointsinviewpoint_variable_stress.eps  viewpoint_fixed_time.eps  viewpoints_fixed_raytracing_mpse.eps  viewpoints_fixed_raytracing_rmse.eps  viewpoints_fixed_rmse.eps  viewpoints_fixed_stress.eps  viewpoints_fixed_time.eps  viewpoints_variable_raytracing_mpse.eps  viewpoints_variable_raytracing_rmse.eps  viewpoints_variable_rmse.eps  viewpoints_variable_stress.eps  viewpoints_variable_time.eps
figures/noise/: angle_noise.eps  dist_noise-gaussian.eps  perm_noise.eps  smart_init.eps
