[tool.poetry]
name = "3d-reconstruction"
version = "0.1.0"
description = "3D reconstruction analysis of MPSE algorithm."
authors = ["Rahat Zaman <rahatzamancse@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.9.9"
opencv-python = "^4.5.4"
numpy = "^1.21.4"
tqdm = "^4.62.3"
Pillow = "^8.4.0"
pandas = "^1.3.4"
plotly = "^5.4.0"
jupyterlab = "^3.2.4"
ipywidgets = "^7.6.5"
trimesh = "^3.9.36"
matplotlib = "^3.5.0"
Rtree = "^0.9.7"
pyproj = "^3.3.0"
scipy = "^1.7.3"
scikit-learn = "^1.0.1"
tensorflow = "^2.7.0"
networkx = "^2.6.3"
pyvista = "^0.32.1"
ipyvtklink = "^0.2.1"
pythreejs = "^2.3.0"
ipygany = "^0.5.0"
seaborn = "^0.11.2"
neptune-client = "^0.16.2"
vedo = "^2022.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
